# secure-signing

sample-amazon-kms-app/: Cargo.toml
sample-amazon-kms-app/src/: application.rs  hsm.rs  main.rs  message.rs
sample-amazon-kms-app/tests/: integration_tests.rs
sample-google-kms-app/: Cargo.toml
sample-google-kms-app/src/: hsm.rs  main.rs  stream.rs
sample-vaultrs-app/: Cargo.toml  signing-policy.hcl
sample-vaultrs-app/src/: application.rs  hsm.rs  main.rs  message.rs
sample-vaultrs-app/tests/: integration_tests.rs
src/: application.rs  hsm.rs  lib.rs
