[package]
name = "google_kms_app"
version = "0.1.0"
edition = "2021"

[dependencies]
google-cloud-kms = "0.6.0"
google-cloud-gax = "0.6.0"  
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
google-cloud-gax = { git = "https://github.com/yoshidan/google-cloud-rust", branch = "main" }
google-cloud-token = { git = "https://github.com/yoshidan/google-cloud-rust", branch = "main" }
